additions to all files

--- a/index.html
+++ b/index.html
@@ -18,25 +18,27 @@
         </header>
 
         <main>
-            <section>
-                <div class="mainCard">
-                    <div class="mainName">Coding Quiz Challenge</div>
-                    <p class="mainParagraph">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-                </div>
-                <button class="startButton">Start Quiz</button>
-            </section>
+            <div class="container">
+                <section class="firstPage">
+                    <div class="mainCard">
+                        <div class="mainName">Coding Quiz Challenge</div>
+                        <p class="mainParagraph">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+                    </div>
+                    <button class="startButton">Start Quiz</button>
+                </section>
 
-            <section>
-                <div class="questionCard">
-                    <div class="question">Question</div>
-                    <ul>
-                        <li><button class="choice" id="btn1">choice 1</button></li>
-                        <li><button class="choice" id="btn2">choice 2</button></li>
-                        <li><button class="choice" id="btn3">choice 3</button></li>
-                        <li><button class="choice" id="btn4">choice 4</button></li>
-                    </ul>
-                </div>
-            </section>
+                <section class="otherPages">
+                    <div class="questionCard">
+                        <div class="question">Question</div>
+                        <ul>
+                            <li><button class="choice" id="btn1">choice 1</button></li>
+                            <li><button class="choice" id="btn2">choice 2</button></li>
+                            <li><button class="choice" id="btn3">choice 3</button></li>
+                            <li><button class="choice" id="btn4">choice 4</button></li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
         </main>
         <script src="./script.js"></script>
     </body>
