added hide element

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
                 <section class="otherPages">
                     <div class="questionCard">
-                        <div class="question">Question</div>
+                        <div style="display:none"  class="question">Question</div>
                         <ul>
-                            <li><button class="choice" id="btn1">choice 1</button></li>
-                            <li><button class="choice" id="btn2">choice 2</button></li>
-                            <li><button class="choice" id="btn3">choice 3</button></li>
-                            <li><button class="choice" id="btn4">choice 4</button></li>
+                            <li><button style="display:none" class="choice" id="btn1">choice 1</button></li>
+                            <li><button style="display:none" class="choice" id="btn2">choice 2</button></li>
+                            <li><button style="display:none" class="choice" id="btn3">choice 3</button></li>
+                            <li><button style="display:none" class="choice" id="btn4">choice 4</button></li>
                         </ul>
                     </div>
                 </section>
